@@ -1,0 +1,17 @@
+/*
+ * Copyright (C) <2012> Fluendo <support@fluendo.com>
+ */
+#ifndef GST_TTMLTYPE_H
+#define GST_TTMLTYPE_H
+
+#include <gst/gst.h>
+
+G_BEGIN_DECLS
+
+#define TTML_MIME "application/ttml+xml"
+
+gboolean gst_ttmltype_init (GstPlugin * plugin);
+
+G_END_DECLS
+
+#endif
